--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://highlightjs.org/static/demo/styles/railscasts.css" />
 	<link rel="stylesheet" href="https://rawcdn.githack.com/dmhendricks/file-icon-vectors/master/dist/file-icon-vectors.min.css" />
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
 
 	<!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -32,7 +33,9 @@
 	<noscript>
 		You need to enable JavaScript to run this app.
 	</noscript>
-	<div id="root"></div>
+
+
+    <div id="root"></div>
 	<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
